fixes body width to prevent overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 html,
 body {
   height: 100%;
-  width: 100%;
   font-family: sans-serif;
   font-size: 10px;
 }
